[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"

anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
console = "0.15.7"
easy-repl = "0.2.1"
enum-iterator = "1.4.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rustyline = "12.0.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.111"
shlex = "1.2.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
tokio = { version = "1.35.1", features = ["full"] }
